--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>ನಮ್ಮ ಕೊಟ್ಟೂರು - Home</title>
 	<link rel="stylesheet" href="CSS/index.css">
+	<link rel="icon" href="img/sri.jpg">
+	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
 	<!-- <script type="text/javascript" src="js/javascript.js">
 
 	</script> -->
@@ -30,10 +32,121 @@
 			</aside> -->
 			<section >
 				<h2>ಶ್ರೀ ಕ್ಷೇತ್ರ ಕೊಟ್ಟೂರು </h2>
-        <p>Out source most of the content to legitamate writer/source</p>
-				<p>Try to include links, like <abbr title = "https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/">wikipedia</abbr> </p>
-        <h3>History of kotturu</h3>
-        <h3>basic statstics</h3>
+        	<p>Out source most of the content to legitamate writer/source</p>
+        	<h3>🌻ಕೊಟ್ಟೂರು ನಗರದ ಇತಿಹಾಸ🌻</h3>
+					<p><a href="https://kn.wikipedia.org/s/ag4" target="_blank">ಕೊಟ್ಟೂರು ವಿಕಿಪೀಡಿಯದಿಂದ</a> ಕೃಪೆ:ವಿಕೀಪಿಡಿಯ (ಅಂತರ್ಜಾಲ) </p>
+						<h4>ರಾಜ್ಯದಲ್ಲಿ ನೂತನವಾಗಿ ರಚಿತವಾಗಿರುವ ಕೊಟ್ಟೂರು ತಾಲೂಕಿನ ಸಂಕ್ಷಿಪ್ತ ಪರಿಚಯ.</h4>
+						<ul>ಕೊಟ್ಟೂರು ಬಳ್ಳಾರಿ ಜಿಲ್ಲೆಯ ಒಂದು ಐತಿಹಾಸಿಕ ಹಿನ್ನಲೆ ಇರುವ ೨೦೧೮ನೇ ಇಸವಿಯಲ್ಲಿ ಹೊಸದಾಗಿ ಘೋಷಣೆಯಾದ ತಾಲೂಕು ಕೇಂದ್ರ.
+							<li>ರಾಜ್ಯ: ಕರ್ನಾಟಕ.</li>
+							<li>ಜಿಲ್ಲೆ: ವಿಜಯನಗರ (ಬಳ್ಳಾರಿ).</li>
+							<li>ಬಳ್ಳಾರಿನಿರ್ದೇಶಾಂಕಗಳು14.817° N 76.217° E</li>
+							<li>ವಿಸ್ತಾರ - ಎತ್ತರ : 33.08 km² - 586 ಮೀ.</li>
+							<li>ಸಮಯ ವಲಯIST (UTC+5:30)</li>
+							<li>2001 ರ ಭಾರತದ ಜನಗಣತಿಯ ಪ್ರಕಾರ
+								<ul>
+									<li>ಕೊಟ್ಟೂರು 22,667 ಜನಸಂಖ್ಯೆಯನ್ನು ಹೊಂದಿತ್ತು.</li>
+									<li>ಜನಸಂಖ್ಯೆಯಲ್ಲಿ ಪುರುಷರು 52% ಮತ್ತು ಮಹಿಳೆಯರು 48% ರಷ್ಟಿದ್ದಾರೆ.</li>
+									<li> ಕೊಟ್ಟೂರು ಸರಾಸರಿ 69% ಸಾಕ್ಷರತೆಯನ್ನು ಹೊಂದಿದೆ, ಇದು ರಾಷ್ಟ್ರೀಯ ಸರಾಸರಿ 59.5% ಗಿಂತ ಹೆಚ್ಚಾಗಿದೆ:<br> ಪುರುಷರ ಸಾಕ್ಷರತೆ 76% <br> ಮಹಿಳಾ ಸಾಕ್ಷರತೆ 61%.</li>
+									<li> ಕೊಟ್ಟೂರಿನಲ್ಲಿ 12% ಜನಸಂಖ್ಯೆಯು 6 ವರ್ಷದೊಳಗಿನವರು</li>
+								</ul>
+							</li>
+							<li>ಸಾಂದ್ರತೆ- 686.25/ಚದರ ಕಿ.ಮಿ.</li>
+							<li>ಕೋಡ್‍ಗಳು
+								<ul>
+									<li>ಪಿನ್ ಕೋಡ್ :583134</li>
+									<li>ಎಸ್.ಟಿ.ಡಿ.:+08391</li>
+									<li>ವಾಹನ :35</li>
+								</ul>
+							</li>
+						</ul>
+						<h4>ಪುರಾಣಿಕ ಇತಿಹಾಸ</h4>
+						<p>&nbsp &nbsp ಇದು ಶ್ರೀ ಗುರು ಕೊಟ್ಟೂರೇಶ್ವರ ಸ್ವಾಮಿಯ ನೆಲೆವೀಡು.
+							 ಶ್ರೀಗುರು ಕೊಟ್ಟೂರೇಶ್ವರನಿಗೆ ಕೊಟ್ಟೂರು ಬಸವೇಶ್ವರ ಎಂತಲು ಕರೆಯುತ್ತಾರೆ.
+							ಪ್ರತಿ ವಷ೯ ಫೆಬ್ರುವರಿ ಅಥವಾ ಮಾಚ್೯ ತಿಂಗಳಲ್ಲಿ ರಥೋತ್ಸವ ಜರುಗುವುದು ಡಿಸೆ೦ಬರ್ ತಿ೦ಗಳಲ್ಲಿ ಲಕ್ಷ ದೀಪೊತ್ಸ್ತ್ವವ ಜರುಗುವುದು.
+							ಈ ಸ್ವಾಮಿಯ ಹಿರೇಮಠಕ್ಕೆ ಅನೇಕ ಭಕ್ತರಿದ್ದಾರೆ. <br>
+							ಕೊಟ್ಟೂರು 4 ಕೊಟ್ಟೂರೇಶ್ವರನ ದೇವಾಲಯಗಳನ್ನು ಹೊಂದಿದೆ
+							<ol>
+								<li>ದರ್ಬಾರ್ ಮಠ ಅಥವಾ ದೊಡ್ಡ ಮಠ (ರಾಜರ ಸಭೆಯ ದೇಗುಲ ಅಥವಾ ದೊಡ್ಡ ದೇಗುಲ)<br>ಪ್ರಭುಗಳು ಈ ಸ್ಥಳವನ್ನು ಧರ್ಮ ಪ್ರಚಾರಕ್ಕಾಗಿ ಮತ್ತು ಜನರ ಸಮಸ್ಯೆಗಳನ್ನು ಪರಿಹರಿಸಲು ಬಳಸಿದರು. </li>
+								<li>ತೊಟ್ಟಿಲು ಮಠ(ತೊಟ್ಟಿಲು ಇರುವ ದೇಗುಲ)<br>ಸ್ವಾಮಿಯು ಮಗುವನ್ನು ಆಶೀರ್ವದಿಸಿದ ಸ್ಥಳವಾಗಿದೆ. </li>
+								<li>ಗಚ್ಚಿನ ಮಠ <br> ಕೊಟ್ಟೂರೇಶ್ವರ ಐಕ್ಯ ಸ್ಥಲ (ಯೋಗ ಸಮಾಧಿ) ಪ್ರವೇಶಿಸಿದ ಮಠ. </li>
+								<li>ಮುರ್ಕಲ್ ಮಠ (3 ಕಲ್ಲಿನ ದೇವಾಲಯ)<br>ಇಲ್ಲಿ ಕೊಟ್ಟೂರು ನಾಡಿನಲ್ಲಿ ಭಗವಂತನು ಮೊದಲು ಕಾಣಿಸಿಕೊಂಡರು</li>
+							</ol>
+							ಗಚ್ಚಿನಮಠದಲ್ಲಿ ಅಕ್ಬರ್ ಚಕ್ರವತಿ೯ ಕೊಟ್ಟಿದ್ದಾನೆ ಎಂಬ ಪ್ರತೀತಿಯಿರುವ ಒಂದು ಮಂಚವೂ ಕೂಡ ಇದೆ.
+							ಗಚ್ಚಿನ ಮಠದಲ್ಲಿ ಶ್ರೀ ಸ್ವಾಮಿಯ ಜೀವಂತ ಸಮಾಧಿಯೂ ಇದೆ. <br> <br>
+							ಕೊಟ್ಟೂರಿಗೆ ಮೊದಲಿದ್ದ ಹೆಸರು ಶಿಖಾಪುರ.
+							ಶ್ರೀ ಗುರು ಕೊಟ್ಟೂರೇಶ್ವರರು ಆಗಮಿಸಿದ ನಂತರ ಪವಾಡಗಳನ್ನು ಮಾಡುತ್ತಾ, ಇಲ್ಲದವರಿಗೆ ಪವಾಡ ಮಾಡಿ ಕೊಡುತ್ತಾ , ಕೊಡುವ ಊರು ಕೊಟ್ಟೂರು ಎಂದಾಯ್ತು ನೋಡ ಎನ್ನುತ್ತಾರೆ ಹಿರಿಯರು.
+							ಕೊಟ್ಟೂರೇಶ್ವರ ಸ್ವಾಮಿ ಉತ್ಸವಕ್ಕೆ ಭಕ್ತರು ತಮ್ಮ ತಮ್ಮ ಊರುಗಳಿಂದ ಕಾಲ್ನಡಿಗೆಯಲ್ಲಿ ನಡೆದುಕೊಂಡು ಬರುವುದು ರೂಢಿಯಲ್ಲಿದೆ.
+							ಹೆಚ್ಚು ಭಕ್ತರು ಶಿವಮೊಗ್ಗ,ದಾವಣಗೆರೆ,ಹರಪನಹಳ್ಳಿ,ಅರಸಿಕೆರೆ, ಮತ್ತು ಹರಿಹರ ಕಡೆಯಿಂದ ಸುಮಾರು ಒಂದು ಲಕ್ಷ ಭಕ್ತರು ಪಾದ ಯಾತ್ರೆ ಬರುತ್ತಾರೆ.
+						</p>
+						<p>ಕೊಟ್ಟೂರೇಶ್ವರ ದೇವರು ಮೈಸೂರು ಸಮೀಪದ ಒಂದು ಹಳ್ಳಿಗೆ ಭೇಟಿ ನೀಡಿದರು ಮತ್ತು ದೇವಸ್ಥಾನದಲ್ಲಿ (ಕರಿಲಿಂಗೇಶ್ವರ ಎಂಬ ಹೆಸರಿನ) ಅರ್ಚಕರ ಭಕ್ತಿಯನ್ನು ಗಮನಿಸಿದರು. ತನ್ನೊಂದಿಗೆ ಬಂದು ತನ್ನ ಶಿಷ್ಯನಾಗಲು ಮತ್ತು ಇನ್ನು ಮುಂದೆ ಕೊಟ್ಟೂರಿನ ದೇವಸ್ಥಾನದ ಅರ್ಚಕನಾಗಲು ವಿನಂತಿಸಿದನು. ಮುಂದಿನ ಪೀಳಿಗೆಗೆ ತಮ್ಮ ಕುಟುಂಬದ ಮಕ್ಕಳೇ ಅರ್ಚಕರಾಗಬೇಕೆಂದು ಆದೇಶಿಸಿದರು ಎಂಬ ಮಾತೂ ಇದೆ. ಹೀಗಾಗಿ ಅರ್ಚಕರ ಕುಟುಂಬವನ್ನು ನೋಡಿಕೊಳ್ಳಲು ಸಮೀಪದ ಕೆ.ಅಯ್ಯನಹಳ್ಳಿ ಎಂಬ ಗ್ರಾಮದಲ್ಲಿ ಜಮೀನು ನೀಡಲಾಗಿತ್ತು. ಈ ಗ್ರಾಮದಲ್ಲಿ ಕರಿಲಿಂಗೇಶ್ವರನಿಗೆ ಮುಡಿಪಾದ ದೇವಾಲಯವಿದೆ. ಅವರ ಕುಟುಂಬದ ಕೆಲವು ವಂಶಸ್ಥರು ಹಿರೇಮಠದಲ್ಲಿ ಪೂಜೆಯನ್ನು ಮುಂದುವರೆಸುತ್ತಾರೆ ಮತ್ತು ಈ ಗ್ರಾಮದಲ್ಲಿಯೇ ಇದ್ದಾರೆ.</p>
+						<p>ಪೌರಾಣಿಕ ಹಿನ್ನಲೆಯಲ್ಲಿ ಶ್ರೀ ಕೊಟ್ಟೂರಶ್ವರ ಸ್ವಾಮಿ ನೆಲೆ ನಿಲ್ಲುವ ಮುಂಚೆ ಈ ಕ್ಷೇತ್ರದಲ್ಲಿ
+							ಶ್ರೀ ವೀರಭದ್ರಶ್ವೇರ ಸ್ವಾಮಿ ನೆಲೆಯ ಕ್ಷೇತ್ರವಾಗಿತ್ತು, ಒಮ್ಮೆ ಕೊಟ್ಟೂರೇಶ್ವರ ಸ್ವಾಮಿಯು ಊರುರು ಸುತ್ತುತ್ತಾ ಶಿಖಾಪುರಕ್ಕೆ ಬಂದಾಗ
+							ರಾತ್ರಿ ಆಯಿತು ಆ ಸಮಯದಲ್ಲಿ ಶ್ರೀ ವೀರಭದ್ರೇಶ್ವರ ಸ್ವಾಮಿಯ ಬಳಿ ಬಂದು ಕೊಟ್ಟುರೇಶ್ವರರು ತಮಗೆ ತಂಗಲು ಸ್ಥಳವನ್ನು ನೀಡುವಂತೆ ಕೋರಲು
+							ಒಪ್ಪಿದ ವೀರಭದ್ರೇಶ್ವರರರು ತಮ್ಮ ಆಸ್ತಾನದಲ್ಲಿ ಮಲಗಲು ಸ್ಥಳವನ್ನು ನೀಡಿದರು ಬೆಳಗಾಗುವ ಹೊತ್ತಿಗೆ ಸಂಪೂರ್ಣಾವಾಗಿ
+							ಇಡಿ ಆಸ್ತಾನವನ್ನು ಆವರಿಸಿದ ಕೊಟ್ಟೂರೇಶ್ವರರು ಶ್ರೀ ವೀರಭದ್ರನಿಗೆ ಸ್ಥಳವೇ ಇಲ್ಲದಂತೆ ಮಾಡಿದರು
+							ಈ ಕುರಿತು ವೀರಭದ್ರನು ಕೊಟ್ಟೂರೇಶ್ವರರನ್ನಲ್ಲಿ ಕೇಳಲಾಗಿ ನೀವು ನಿಮ್ಮ ಸ್ಥಳವನ್ನು ನನಗೆ ನೀಡಿ ನೀವು ಕೊಡದಗುಡ್ಡಕ್ಕೆ ಹೋಗಿ ನೆಲೆಸಿರಿ ಎಂದು ಹೇಳಿದರು
+							ಅದರಂತೆ ವೀರಭದ್ರ ದೇವರು ಇನ್ನು ಮುಂದೆ ಆ ನಿಮ್ಮ ಸ್ಥಳವನ್ನು ನೀವು ಯಾರಿಗೂ ಕೊಡಬಾರದು
+							ಆ ಕ್ಷೇತ್ರವು "ಕೊಡದಗುಡ್ಡ" ಎಂದು ಪ್ರಖ್ಯಾತವಾಗಲಿ
+							ಅಂತಯೇ ನೀವು ನನಗೆ ಕೊಟ್ಟ ಈ ಶಿಖಾಪುರ ಇನ್ನು ಮುಂದೆ "ಕೊಟ್ಟೂರು" ಎಂದು ಪ್ರಖ್ಯಾತವಾಗಲಿ ಎಂದು ಹರಸಿದರು.
+							ಇತ್ತಿಚ್ಚಿಗೆ ಭಕ್ತರೇ ಸೇರಿಕೊಂಡು ತಮ್ಮ ಆರಾಧ್ಯ ದೈವವಾದ ಕೊಟ್ಟುರೇಶ್ವರನಿಗೆ ಹರಪನಹಳ್ಳಿ ರಸ್ತೆಯ ಪಕ್ಕದಲ್ಲಿ ದೇವಸ್ಥಾನ ಕಟ್ಟಿದ್ದರೆ.
+							ಅದಕ್ಕೆ ಮರಿ ಕೊಟ್ಟುರೇಶ್ವರ ದೇವಸ್ಥಾನವೆಂದು ಕರೆಯುತ್ತಾರೆ.
+							ಮೂರು ತಿಂಗಳ ಹಿಂದೆ ಮರಿ ಕೊಟ್ಟುರೇಶ್ವರನಿಗೆ 21 ಕೆ.ಜಿ.ಬೆಳ್ಳಿಯ ಮೂರ್ತಿ.ಮತ್ತು ಗದ್ದುಗೆ ಭಕ್ತಧಿಗಳು ನಿರ್ಮಿಸಿದ್ದರೆ.
+							ಈ ಕಾರ್ಯವನ್ನ ಹೊಸಪೇಟೆಯ ಶಿಲ್ಪಿ ನಿರ್ಮಿಸಿದ್ದರೆ.
+						</p>
+						<p>ಕೊಟ್ಟೂರಿನ ಹೊರವಲಯದಲ್ಲಿ ಕೊಟ್ಟೂರಮ್ಮನ (ಪಾರ್ವತಿ) ದೇವಸ್ಥಾನವಿದೆ. ಕೊಟ್ಟೂರಮ್ಮ ಅವರು ಕೊಟ್ಟೂರೇಶ್ವರನ ಹೆಂಡತಿಯಾಗಲೀ ಅಥವಾ ಸಂಬಂಧಿಯಾಗಲೀ ಅಲ್ಲ ಆದರೆ ಪಾರ್ವತಿ ದೇವಿಯ ರೂಪವಾಗಿದೆ. ಕೊಟ್ಟೂರಿನ ಕರ್ಣಂ ಕುಟುಂಬ ಈ ದೇವಾಲಯವನ್ನು ನಿರ್ವಹಿಸುತ್ತಿದೆ. ಪ್ರತಿ ಆಗಸ್ಟ್‌ನಲ್ಲಿ ಉತ್ಸವವಿರುತ್ತದೆ, ಅದರಲ್ಲಿ ಲಕ್ಷಾಂತರ ಜನರು ಉತ್ಸವದಲ್ಲಿ ಪಾಲ್ಗೊಳ್ಳುತ್ತಾರೆ.</p>
+					<h3>ವ್ಯಾಪಾರ ವಹಿವಾಟು</h3>
+						<p>ಈ ಊರಿನ ಮಂಡಕ್ಕಿ ಮೆಣಸಿನಕಾಯಿ ಎಂಬ ಖಾದ್ಯವು ಅತ್ಯಂತ ರುಚಿಕರವಾಗಿರುವುದು ಮತ್ತು ಜನಪ್ರಿಯವು ಆಗಿದೆ.
+							ಚಿಕ್ಕ ಪಟ್ಟಣವಾಗಿದ್ದರೂ ವ್ಯಾಪಾರ ವಹಿವಾಟು ಸಮೃದ್ಡವಾಗಿದೆ.
+							ಕೃಷಿ ಉತ್ಪನ್ನ ಮಾರುಕಟ್ಟೆ ಅನ್ನದಾತನ ಮಾರುಕಟ್ಟೆ, ೪ ಕಾಟನ್ ಪ್ರೆಸ್ ಗಳು ೯ ಹತ್ತಿ ಜಿನಿಂಗ್, ಮತ್ತು ೮ ಶೇಂಗಾ ಡಿಕಾಟಿಕೆಟಿಂಗ್ ಮಿಲ್ ಗಳು ವ್ಯಾಪರದ ಅವಶ್ಯಕತೆ ಪೂರೈಸುವುದು.
+							ಈ ಊರಿನ ಪ್ರಮುಖ ಬೆಳೆಗಳಂದರೆ ಜೋಳ,ರಾಗಿ ,ಹತ್ತಿ, ಶೇಂಗಾ, ಸೂಯ೯ಕಾಂತಿ ಇನ್ನಿತರವು.
+							ತೂಕ ಮಾಡಲಿಕ್ಕೆ ದೇವರಮನಿ ವೇ ಬ್ರಿಡ್ಜ್ ಇದ್ದು ಮತ್ತು
+							ಇತ್ತಿಚ್ಚೀಗೆ ಹೊಸದಾಗಿ ರೈಲು ಓಡಾಟ ಪ್ರಾರಂಭವಾಗಿದ್ದು, ಹರಿಹರ -ಕೊಟ್ಟೂರು ಮಾರ್ಗಾದಲ್ಲಿ ಸಂಚರಿಸುತ್ತದೆ.
+							ಇದರಿಂದಾಗಿ ಕೊಟ್ಟೂರು ಪಟ್ಟಣವು ಮುಖ್ಯ ವಾಣಿಜ್ಯ ಕೇಂದ್ರವಾಗಿ ಬೆಳೆಯಲು ಸಾಕಷ್ಟು ಸಹಾಯಕವಾಗಿದೆ.
+							ನೂತನ ತಾಲೂಕು ಪಟ್ಟಿಯಲ್ಲಿ ಈ ಪಟ್ಟಣದ ಹೆಸರು ಇದ್ದು ಅದಷ್ಟು ಬೇಗನೆ ತಾಲೂಕು ರಚನೆಯಾಗಿ ಇನ್ನುಷ್ಟು ಇನ್ನುಷ್ಟು ಬೆಳವಣಿಗೆ ಸಾದಿಸಲು ಸಹಾಯಕವಾಗಲಿ.
+						</p>
+					<h3>ಕಾಲೇಜು</h3>
+						<p>ಈ ಊರಿನಲ್ಲಿರುವ ಪ್ರಮುಖವಾದ ಕಾಲೇಜುಗಳು, ಗ್ರಾಮೀಣ ಭಾಗದ ವಿದ್ಯಾರ್ಥಿಗಳ ಪಾಲಿಗೆ ವರದಾನವಾಗಿವೆ.<br>
+							ಶ್ರೀ ಕೊಟ್ಟುರೇಶ್ವರ ಕಾಲೇಜ್,ಶ್ರೀ ನಿಧಿ,ಇಂದು ಕಾಲೇಜ್,ಜ್ಯೂನೀಯರ್ ಕಾಲೇಜ್.ಪ್ರಮುಖವಾಗಿವೆ.<br>
+							ತುಂಗಭದ್ರ ಕಾಲೇಜ್ ಸಿ.ಪಿ.ಇಡಿ,ಬಿ.ಪಿ.ಇಡಿ.ಬಿ.ಇಡಿ.ಕಾಲೇಜ್ ಗಳನ್ನ ಒಳಗೊಂಡಿದೆ.</p>
+					<h3 id="persons">ಪ್ರಮುಖ ವ್ಯಕ್ತಿಗಳು</h3>
+					<p>ದೇವರಮನಿ ಶಿವಾನಂದಪ್ಪ, ಕಾವ್ಯನಾಮ ದೇಸಿ, ಇವರು ಔತನ ಎಂಬ ಪ್ರಬಂಧ ಸಂಕಲನವನ್ನು ಬರೆದವರು ಇಲ್ಲಿನ ಮೊದಲ ಲೇಖಕರು.<br> ವೀರಪ್ಪ ಮಾಸ್ತರ್, ಯಜಮಾನರು ಈ ಜಾಗಕ್ಕೆ ಸೇರಿದವರು.<br> ಎಲಿವಾಳು ಸಿದ್ದಯ್ಯ, ಕನ್ನಡ ಚಲನಚಿತ್ರ "ಕೃಷ್ಣ ಗಾರುಡಿ" ಯಲ್ಲಿ ಕೃಷ್ಣ ಪರಮಾತ್ಮನ ಪಾತ್ರಕ್ಕೆ ಹೆಸರುವಾಸಿಯಾದ ಕೊತ್ತೂರು ಚೆನ್ನಬಸಪ್ಪ, ಪ್ರಸಿದ್ಧ ಸಿನಿ ನಟರು.<br> ಇತ್ತೀಚೆಗೆ ಬಿಡುಗಡೆಯಾದ ಕನ್ನಡ ಚಲನಚಿತ್ರ "ಕೃಷ್ಣನ್ ಮ್ಯಾರೇಜ್ ಸ್ಟೋರಿ", ಚೊಚ್ಚಲ ನಿರ್ದೇಶಕ ಶ್ರೀ ನೂತನ್ ಉಮೇಶ್ ಕೂಡ ಕೊಟ್ಟೂರಿನವರಾಗಿದ್ದಾರೆ.
+						<br>ಪಿ.ಗುರುಪ್ರಸಾದ್ ಸೆಟ್ಟಿಯವರ ಪುತ್ರ ಪತ್ತಿಕೊಂಡ ಸುಬ್ರಹ್ಮಣ್ಯ ಸೆಟ್ಟಿ ಅವರು ಕೈಗಾರಿಕೋದ್ಯಮಿ ಮತ್ತು ಉದ್ಯಮಿ ಮತ್ತು ಮರ್ಚೆಂಟ್ ಅಸೋಸಿಯೇಶನ್ ಕೊಟ್ಟೂರು ಅಧ್ಯಕ್ಷರಾಗಿದ್ದರು. ವರ್ತಕರ ಸಮುದಾಯದಿಂದ ಎಪಿಎಂಸಿ ಸದಸ್ಯರಾಗಿಯೂ ಆಯ್ಕೆಯಾಗಿದ್ದರು.
+						<br>ಇಲ್ಲಿನ ವಿದ್ವಾಂಸ ಹಾಗೂ ವಿಜ್ಞಾನಿ ಡಾ.ಹಳ್ಳಿ ಗುರುಬಸಪ್ಪ ದಶಕಗಳ ಹಿಂದೆ ಆಸ್ಟ್ರೇಲಿಯಾದಲ್ಲಿ ನೆಲೆಸಿದ್ದರು.
+						<br>ಕೇಂದ್ರ ಸಾಹಿತ್ಯ ಅಕಾಡೆಮಿ ಪ್ರಶಸ್ತಿ ಪುರಸ್ಕೃತ ಕುಂ.ವೀರಭದ್ರಪ್ಪ (ಲೇಖಕ) ಇಂದಿಗೂ ಇಲ್ಲಿಯೇ ನೆಲೆಸಿದ್ದಾರೆ. ಅವರ ಕೊಟ್ರೇಶಿ ಕನಸು ಮತ್ತು ಬೆಳ್ಳಿಯ ಹೂಗಳು (ಮನ ಮೆಚ್ಚಿದ ಹುಡುಗ) ಕನ್ನಡದಲ್ಲಿ ಚಲನಚಿತ್ರಗಳಾಗಿ ತಯಾರಾಗುತ್ತವೆ.
+						<br>ಈ ಸ್ಥಳವು ಹಿರಿಯ ರಂಗಕರ್ಮಿ ಕೊಟ್ಟೂರಪ್ಪ, ಪೌರಾಣಿಕ ನಟರಿಂದ ಪ್ರಸಿದ್ಧವಾಗಿದೆ, ಅವರ ಅಭಿನಯವು ದಾನಶೂರ ಕರ್ಣನ ಪಾತ್ರದಲ್ಲಿ ಕರ್ನಾಟಕದಾದ್ಯಂತ ವ್ಯಾಪಕವಾಗಿ ಪ್ರಸಿದ್ಧವಾಗಿದೆ.
+					ದೇಶಿ, ದೇವರಮನೆ ಶಿವಾನಂದಪ್ಪ, ಈ ಸ್ಥಳದ ಮೊದಲ ಲೇಖಕರು, ಅವರು ಬಳ್ಳಾರಿಯ ಸ್ಥಳೀಯ ದಿನಪತ್ರಿಕೆ, ರೈತಾ, ಉಪ ಸಂಪಾದಕರೂ ಆಗಿದ್ದರು.
+					 ಭದ್ರಶೆಟ್ಟಿ ಸಣ್ಣ ರುದ್ರಪ್ಪ, ಗೊರಲಿ ಶರಣಪ್ಪ, ಡಾ. ಅಲಬೂರು ನಂಜಪ್ಪ ಇಲ್ಲಿನ ಕೆಲವು ಸ್ವಾತಂತ್ರ್ಯ ಹೋರಾಟಗಾರರು. </p>
+				<h4>Suvarna news coverage dated - 28-02-2019
+					<a href="https://kannada.asianetnews.com/amp/travel/significance-of-kuttur-sri-guru-basaveshwara-pnmhpy">ನಿಜ ಭಕುತಿಯ ತೋರಿದ ಮಹಾ ಜಂಗಮ!</a> </h4>
+					<p>ತನ್ನ ಅದಮ್ಯ ಭಕ್ತಿ, ಸಮಾನತೆಯ ಆಶಯಗಳನೊತ್ತ ಕೊಟ್ಟೂರಿನ ಶ್ರೀಗುರು ಬಸವೇಶ್ವರರು
+						ಶೋಷಿತರ ಧ್ವನಿಯಾಗಿ ಸಾಮಾಜಿಕ ಹರಿಕಾರನಾಗಿ, ಡಾಂಬಿಕ ಭಕ್ತಿ, ಮೂಢನಂಬಿಕೆಯನ್ನು
+						ತನ್ನ ಜೀವನ ದರ್ಶನದ ಮೂಲಕ ಸಾಮಾನ್ಯ ಜನತೆಗೆ ಮನಸ್ಸಿನಿಂದ ಕಿತ್ತೊಗೆದು ಮಾನವೀಯತೆಯ ಬೀಜ ಬಿತ್ತಿದ ಮಹಾಶರಣರು.
+						12ನೇ ಶತನಮಾನದ ಬಸವಣ್ಣನಂತೆ ಪಂಚಗಣಾಧೀಶ್ವರರು ಕೂಡ ಜಗತ್ತಿನ ಮೂಲೆ ಮೂಲೆಗೆ ಸಂಚರಿಸಿ ಜನತೆಯಲ್ಲಿದ್ದ ಮೌಢ್ಯತೆಯನ್ನು
+						ತೊಲಗಿಸಿ ನಿಜ ಜೀವನದ ಮೌಲ್ಯಗಳನ್ನು ತಿಳಿಸಿದವರು.
+						ಕೊಟ್ಟೂರಿನ ಗುರುಬಸವೇಶ್ವರ, ನಾಯಕನಹಟ್ಟಿ ತಿಪ್ಪೇಸ್ವಾಮಿ, ಹರಪನಹಳ್ಳಿಯ ಕೆಂಪಯ್ಯ,
+						ಅರಸೀಕೆರೆಯ ಕೋಲಶಾಂತೇಶ್ವರ, ಕೂಲಹಳ್ಳಿಯ ಮದ್ದಾನಸ್ವಾಮಿ ತಮ್ಮ ಜೀವನದ ಮೂಲಕ ಆದರ್ಶಗಳ ಮೂಲಕ
+						ಅಂದು ಸಮಾಜದಲ್ಲಿ ಮನೆಮಾಡಿದ್ದ ಡಾಂಬಿಕ ಭಕ್ತಿಯನ್ನು ಖಂಡಿಸಿ ಸಮಸಮಾಜ ಕಟ್ಟುವಲ್ಲಿ ಶ್ರಮಿಸಿದ ದಾರ್ಶನಿಕರಾದರು. <br><br>
+						ಪಂಚಗಣಾಧೀಶ್ವರರಲ್ಲಿ ಕೊಟ್ಟೂರಿನ ಶ್ರೀ ಗುರು ಬಸವೇಶ್ವರ ಪ್ರಮುಖರಾಗಿದ್ದು,
+						ತನ್ನ ಇಚ್ಛಾಶಕ್ತಿ, ಮೌಲಿಕ ಜೀವನದ ಮೂಲಕ ಬದುಕಿನ ವಿವಿಧ ಆಯಾಮಗಳನ್ನು ಜನತೆಗೆ ತೋರಿಸಿಕೊಟ್ಟರೆ
+						ಈತನ ದಿಟ್ಟ ನಿಲುವುಗಳು ಜನತೆಗೆ ಪವಾಡಗಳಂತೆ ಗೋಚರಿಸಿದವು.
+						ಮನುಷ್ಯನಲ್ಲಿ ಇಚ್ಛಾಶಕ್ತಿಯೊಂದಿದ್ದರೆ ಏನು ಬೇಕಾದರೂ ಸಾಧಿಸಬಹುದು ಎನ್ನುವುದಕ್ಕೆ ಶ್ರೀ ಗುರು ಬಸವೇಶ್ವರ ಸಾಕ್ಷಿಯಾಗಿದ್ದಾನೆ.
+						ಕೊಟ್ಟೂರಿನ ಮೊದಲ ಹೆಸರು ಶಿಖಾಪುರ ಎಂದು ಕರೆಯುತ್ತಿದ್ದು ಶ್ರೀ ಗುರು ಬಸವೇಶ್ವರ ಭಕ್ತರಿಗೆ ವರವನ್ನು ಕೊಟ್ಟು
+						ಹರಸಿದ್ದರಿಂದ ಶಿಖಾಪುರ ಕೊಟ್ಟೂರು ಎಂದು ಬದಲಾಯಿತು ಎಂದು ಪುರಾಣಗಳಿಂದ ಜನಪದ ದಾಖಲೆಗಳ ಮೂಲಕ ತಿಳಿದು ಬರುತ್ತದೆ.
+						ಶ್ರೀ ಗುರುಬಸವೇಶ್ವರ ಎನ್ನುವ ಶರಣ ಕೊಟ್ಟೂರಿನಲ್ಲಿ ನೆಲೆಸಿದ್ದರಿಂದ ಕೊಟ್ಟೂರಿನ ಈಶನಾದನು ನಂತರ ಕೊಟ್ಟೂರೇಶ, ಕೊಟ್ಟೂರೇಶ್ವರನಾಗಿ
+						ಈಗ ರಾಜ್ಯ, ದೇಶಾದ್ಯಂತ ಶರಣನೊಬ್ಬ ಭಕ್ತರ ಆರಾಧ್ಯದೇವನಾಗಿ ೪ ಮಠಗಳಲ್ಲಿ ಪೂಜಿಸಲ್ಪಡುತ್ತಿದ್ದಾನೆ. <br><br>
+					<ul>
+						<li>ಶಾಂತಿ ಶಾಂತಿ ಶಾಂತಿ ಎಂದು 3 ಸಲ ಹೇಳುವುದೇಕೆ? <br>ಅಂದಿನ ಶಿಖಾಪುರ ಅಂದರೆ ಈಗಿನ ಕೊಟ್ಟೂರಿನಲ್ಲಿ ಹುಚ್ಚನ ವೇಷಧರಿಸಿ ಅಂದು ಮಹಿಳೆಯರ ಮೇಲೆ, ಶೋಷಿತರ ಮೇಲೆ ನಡೆಯುತ್ತಿದ್ದ ದೌರ್ಜನ್ಯವನ್ನು ಖಂಡಿಸಿ ಜಗದ ಹುಚ್ಚನ್ನು ಬಿಡಿಸಿದ ಎಷ್ಟೋ ನಿದರ್ಶನಗಳನ್ನು ನಾವು ಕಾಣಬಹುದು. ಬಟ್ಟೆಯಿಲ್ಲದೇ ಶಿಖಾಪುರದಲ್ಲಿ ತಿರುಗುತ್ತಿದ್ದಾಗ ಇಲ್ಲಿಯ ಕೆಲವು ಸ್ತ್ರೀಯರು ನಾಚಿಕೆ ಇಲ್ಲದ ಭಂಡ ಜಂಗಮ ಎಂದು ಮೂದಲಿಸಿದರು. ಆದರೆ ಸೋಮವ್ವ ಎಂಬ ಸಾಮಾನ್ಯ ಮಹಿಳೆ ತನ್ನ ಸೀರೆ ಸೆರಗನ್ನೇ ಹರಿದು ಜಂಗಮ ವೇಷಧಾರಿ ಬಸವೇಶ್ವರನಿಗೆ ಕೊಟ್ಟಳು. ಸೋಮವ್ವನ ಪತಿ ನಿನಗೆ ಬಡಜಂಗಮಗೆ ಏನು ಸಂಬಂಧ ಎಂದು ಹೊಡೆಯಲು ಮುಂದಾದಾಗ ಸೋಮವ್ವನ ಪತಿಗೆ ಪತ್ನಿಯ ನಿಜ ಭಕ್ತಿ, ಮಾನವೀಯ ಮೌಲ್ಯಗಳನ್ನು ತಿಳಿಸಿಕೊಟ್ಟ ಬಡಜಂಗಮ ಮುಂದೆ ನಂಬಿಯಕ್ಕ ಎನ್ನುವ ಶಿವಶರಣೆಯರ ಮನೆಯಲ್ಲಿ ದನಗಾಹಿಯಾಗಿ ಸೇರಿಕೊಂಡು ಅಲ್ಲಿಯೂ ಕೂಡ ತನ್ನ ನಿಜಭಕ್ತಿಯಿಂದ ನಂಬಿಯಕ್ಕನನ್ನು ಅಚ್ಚರಿಗೊಳಿಸಿದ. ಈಗೇ ಇಂತಹ ನೂರಾರು ಬದುಕಿನ ವಿಸ್ಮಯಗಳನ್ನು ತೋರಿಸಿಕೊಡುವುದರ ಮೂಲಕ ಇಲ್ಲಿಯ ಜನತೆಗೆ ಭಕ್ತಿ, ನಿಜಜೀವನದ ಮೌಲ್ಯಗಳನ್ನು ಬಿತ್ತುವಲ್ಲಿ ಯಶಸ್ವಿಯಾದನು. </li>
+						<li>ದಿಲ್ಲಿಯ ರಾಜ ಅಕ್ಬರ್‌ನಿಗೆ ಅಚ್ಚರಿ ಮೂಡಿಸಿದ ಬಸವೇಶ್ವರ :<br> ಮೊಗಲರ ದೊರೆ ಅಕ್ಬರ ಬಾದಶಹನ ಆಸ್ಥಾನಕ್ಕೆ ನಿರಾಕಾರ ರೂಪನಾಗಿ ರಾಣಿಯರ ಅಂತಃಪುರ ಪ್ರವೇಶಿಸಿದನು ಇದರಿಂದ ಕುಪಿತನಾದ ಅಕ್ಬರ ದೊರೆ ಜಂಗಮನ ಮೇಲೆ ಖಡ್ಗವನ್ನು ಎತ್ತಲು ಹೋದಾಗ ಅಕ್ಬರ್‌ನಿಗೆ ಅಲ್ಲಿ ನಿಜಭಕ್ತಿಯ ದರ್ಶನವಾಗಿದೆ ಈಗಾಗಿ ಅಕ್ಬರ್ ಕೂಡಲೇ ಶ್ರೀಗುರು ಬಸವೇಶ್ವರನ ಪಾದಕ್ಕೆ ಎರಗಿದನು. ನಂತರ ಬಸವೇಶ್ವರ ಪವಡಿಸಿದ ಅಕ್ಬರ್‌ನ ಮಣಿಮಂಚವನ್ನು ತನ್ನ ರಾಣಿಯರು, ಸ್ನೇಹಿತರೊಡಗೂಡಿ ಶಿಖಾಪುರ ಈಗಿರುವ ಕೊಟ್ಟೂರಿಗೆ ಬಂದು ಶ್ರೀಗುರು ಬಸವೇಶ್ವರನಿಗೆ ಅರ್ಪಿಸಿದ ಪ್ರಸಂಗ ನಡೆಸಿದ್ದು ಇಂದಿಗೂ ಕೂಡ ಕೊಟ್ಟೂರಿನ ಶ್ರೀ ಗುರು ಬಸವೇಶ್ವರ ದೇವಾಲಯದಲ್ಲಿ ಅಕ್ಬರನು ನೀಡಿದ ಮಣಿಮಂಚವನ್ನು ಕಾಣಬಹುದು. ಶ್ರೀಗುರು ಬಸವೇಶ್ವರನ ಜೀವನ ಮೌಲ್ಯಗಳು ಮೇಲ್ನೋಟಕ್ಕೆ ಪವಾಡಗಳಂತೆ ಪುರಾಣಗಳಲ್ಲಿ ಬಿಂಬಿಸಿದ್ದರೂ ಧಾರ್ಮಿಕ ಮತ್ತು ಐತಿಹಾಸಿಕವಾಗಿಯೂ ಕೆಲವೊಂದು ಸ್ಪಷ್ಟ ದಾಖಲೆಗಳು ಐತಿಹ್ಯಗಳು ದೊರೆಯುತ್ತವೆ. ಇಲ್ಲಿಯ ಜನಪದರ ಮುತ್ತಿಗೆ ಪದಗಳಲ್ಲಿಯೂ ಕೂಡ ಶ್ರೀ ಗುರು ಬಸವೇಶ್ವರನ ಸಮ ಸಮಾಜ ಹಾಗೂ ಅಸ್ಪಶ್ಯತೆಯ ವಿರುದ್ಧ ಹೋರಾಟ ಮಾಡಿದ ನೂರಾರು ಘಟನೆಗಳು ಸಿಗುತ್ತವೆ. ಸ್ಥಳೀಯ ಕುಟುಂಬಗಳ ಹೆಸರಗಳು ಕೂಡ ದಾಖಲಾಗಿವೆ.</li>
+						<li>ಪಾಳೇಗಾರರಿಗೂ ವರದೇವನಾದ ಶ್ರೀ ಗುರು ಬಸವೇಶ್ವರ:<br> ಪಾಳೇಗಾರರ ಕಾಲದಲ್ಲಿ ಕೊಟ್ಟೂರು ಹರಪನಹಳ್ಳಿ ಪಾಳೇಗಾರರ ವ್ಯಾಪ್ತಿಯಲ್ಲಿತ್ತು ಎಂಬುದಕ್ಕೆ ಹರಪನಹಳ್ಳಿ ಸೋಮಶೇಖರ ರಾಜ ಇತಿಹಾಸ ತೆಗೆದರೆ ಕೊಟ್ಟೂರಿನ ಶ್ರೀ ಗುರುಬಸವೇಶ್ವರ ಅಲ್ಲಿ ಪ್ರಮುಖಪಾತ್ರ ವಹಿಸುತ್ತಾನೆ. ಚಿತ್ರದುರ್ಗದ ಪಾಳೇಗಾರರಾದ ಸಿದ್ದೋಜಿ, ಮುರಾರಿ ಕೊಟ್ಟೂರು ಪಟ್ಟಣದ ಮೇಲೆ ದಂಡೆತ್ತಿ ಬಂದಾಗ ಹರನಪಹಳ್ಳಿ ರಾಜ ಸೋಮಶೇಖರ ಶ್ರೀಗುರು ಬಸವೇಶ್ವರನ ಮೊರೆ ಹೋಗಿ ಬೇಡಿಕೊಂಡಾಗ ಚಿತ್ರದುರ್ಗದ ಪಾಳೇಗಾರರು ಕೊಟ್ಟೂರನ್ನು ವಶಕ್ಕೆ ಪಡೆಯದೇ ಶ್ರೀಗುರು ಬಸವೇಶ್ವರನ ದರ್ಶನ, ವಿಸ್ಮಯಗಳಿಗೆ ಬೆರಾಗಾಗಿ ಹಾಗೇಯೇ ವಾಪಾಸ್ಸು ಹೋದ ಪ್ರಸಂಗವನ್ನು ಇಲ್ಲಿಯ ಜನಪದ ಬಾಯಿಂದ ಬಂದ ಮುತ್ತಿಗೆ ಪದಗಳ ಮೂಲಕ ಸ್ಪಷ್ಟವಾಗಿ ತಿಳಿಯುತ್ತದೆ. ಈಗೇ ಒಂದು ಕಡೆ ಜನತೆಯನ್ನು ಎಚ್ಚರಿಸುವ ಕಾಯಕವನ್ನೇ ಮಾಡಿಕೊಂಡ ಬಂದ ಬಸವೇಶ್ವರ ಮತ್ತೊಂದು ಕಡೆ ಸಾಮಾನ್ಯ ಜನತೆಗೆ ಈತನ ನಿಜಜೀವನ ಪವಾಡಗಳೆಂಬಂತೆ ಕಂಡು ದೇವಮಾನವನಾಗಿ ರೂಪುಗೊಂಡ ಬಗೆ ನಿಜಕ್ಕೂ ಅಚ್ಚರಿ ಮೂಡಿಸುತ್ತದೆ.</li>
+					</ul>
+					</p>
+
+
+
+
+				<p></p>
+
+				<h3>basic statstics</h3>
         <h3>short description & link to each heading of navigation</h3>
         <h3>bus route & train routes & connectivity</h3>
         <h3>famous persons</h3>
@@ -41,19 +154,22 @@
 	</main>
   <footer>
     <p>About us</p>
-    <p> This page was created by Kotturu Media House &amp Dr Prashanth
+    <p> This page was created by &copyKotturu Media House 2022
       <a href="https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/" target="_blank">Wikepedia page of the kotturu</a>
     </p>
-    <p>Contact us
-      <ul>
-        <li>Email us</li>
-        <li>WhatsApp</li>
-        <li>Twitter</li>
-        <li>Facebook</li>
-        <li>Instagram</li>
-        <li>GitHub</li>
-      </ul>
-    </p>
+    <details open>
+			<summary>Contact us</summary> 
+	      <ul>
+	        <li>Email us</li>
+	        <li><abbr title="WhatsApp Not yet avilable">WhatsApp</abbr> </li>
+	        <li><i class="fab fa-twitter"><a href="https://twitter.com/MediaKotturu" target="_blank" >Kotturu Media House</a></i></li>
+	        <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" >Kotturu M H</a>	</li>
+	        <li><i class="fab fa-facebook"></i><a href="https://www.facebook.com/MediaKotturu/" target="_blank">Kotturu Media House</a></li>
+	        <li>GitHub</li>
+	      </ul>
+
+    </details>
+
     <address class="adr">
       our office address
     </address>
