--- a/home.html
+++ b/home.html
@@ -141,31 +141,26 @@
 					</ul>
 					</p>
 
-
-
-
-				<p></p>
-
-				<h3>basic statstics</h3>
         <h3>short description & link to each heading of navigation</h3>
         <h3>bus route & train routes & connectivity</h3>
-        <h3>famous persons</h3>
+
 			</section>
 	</main>
   <footer>
     <p>About us</p>
-    <p> This page was created by &copyKotturu Media House 2022
+    <p> This page was created by  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup></i>
       <a href="https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/" target="_blank">Wikepedia page of the kotturu</a>
     </p>
     <details open>
-			<summary>Contact us</summary> 
+			<summary>Contact us</summary>
 	      <ul>
-	        <li>Email us</li>
-	        <li><abbr title="WhatsApp Not yet avilable">WhatsApp</abbr> </li>
-	        <li><i class="fab fa-twitter"><a href="https://twitter.com/MediaKotturu" target="_blank" >Kotturu Media House</a></i></li>
-	        <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" >Kotturu M H</a>	</li>
-	        <li><i class="fab fa-facebook"></i><a href="https://www.facebook.com/MediaKotturu/" target="_blank">Kotturu Media House</a></li>
-	        <li>GitHub</li>
+	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
+	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
+	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
+	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
+	        <li><a href="https://www.facebook.com/MediaKotturu/" target="_blank"><i class="fab fa-facebook">Kotturu Media House</i></a></li>
+					<li><a href="https://www.youtube.com/channel/UCzLq02fdQk_LoQqW3Ofe0NQ" target="_blank"><i class="fab fa-youtube">youtube</i></a> </li>
+	        <li><a href="#" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
 	      </ul>
 
     </details>
