--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ನಮ್ಮ ಕೊಟ್ಟೂರು - Home</title>
-	<link rel="stylesheet" href="CSS/index.css">
+	<link rel="stylesheet" href="css/index.css">
 	<link rel="icon" href="img/sri.jpg">
 	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
 	<!-- <script type="text/javascript" src="js/javascript.js">
