--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ಹಾಡು ಮತ್ತು ಭಜನೆಗಳು</title>
-	<link rel="stylesheet" href="CSS/index.css">
+	<link rel="stylesheet" href="css/index.css">
 	<!-- <script type="text/javascript" src="js/javascript1.js">
 
 	</script> -->
