--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
 	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
 	        <li><a href="https://www.facebook.com/MediaKotturu/" target="_blank"><i class="fab fa-facebook">Kotturu Media House</i></a></li>
 					<li><a href="https://www.youtube.com/channel/UCzLq02fdQk_LoQqW3Ofe0NQ" target="_blank"><i class="fab fa-youtube">youtube</i></a> </li>
-	        <li><a href="#" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
+	        <li><a href="https://github.com/MediaKotturu" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
 	      </ul>
 
     </details>
