--- a/home.html
+++ b/home.html
@@ -6,9 +6,7 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="icon" href="img/sri.jpg">
 	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
-	<!-- <script type="text/javascript" src="js/javascript.js">
-
-	</script> -->
+	<script type="text/javascript" src="js/javascript.js"> </script>
 </head>
 <body>
 	<header>
@@ -156,15 +154,11 @@
 	      <ul>
 	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
-	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
+	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">C</i></a></li>
 	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
 	        <li><a href="https://www.facebook.com/MediaKotturu/" target="_blank"><i class="fab fa-facebook">Kotturu Media House</i></a></li>
 					<li><a href="https://www.youtube.com/channel/UCzLq02fdQk_LoQqW3Ofe0NQ" target="_blank"><i class="fab fa-youtube">youtube</i></a> </li>
-<<<<<<< HEAD
 	        <li><a href="https://github.com/NammaKotturu" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
-=======
-	        <li><a href="https://github.com/MediaKotturu" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
->>>>>>> 33884b7044bfb25095c5bcfd175ef043c0038e25
 	      </ul>
 
     </details>
