--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
       <a href="https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/" target="_blank">Wikepedia page of the kotturu</a>
     </p>
     <details open>
-			<summary>Contact us</summary>
+			<summary id="contact">Contact us</summary>
 	      <ul>
 	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
