--- a/template.html
+++ b/template.html
@@ -44,7 +44,7 @@
 
     </details>
     <details open>
-			<summary>Contact us</summary>
+			<summary id="contact">Contact Us</summary>
 	      <ul>
 	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
