--- a/account.html
+++ b/account.html
@@ -11,7 +11,7 @@
 
 	</script>
 </head>
-<body onload="hi()">
+<body>
 	<header>
 		<h1>ನಮ್ಮ ಕೊಟ್ಟೂರು </h1>
 		<nav>
@@ -32,7 +32,7 @@
 
 			</aside>
 			<section class="right">
-
+        <button type="button" name="Click here" onclick="hi()">Click Here for more info</button>
 			</section>
 	</main>
   <footer>
