--- a/map.html
+++ b/map.html
@@ -39,7 +39,7 @@
             <li>wards division & elected leadear</li>
             <li>water & electricity grids</li>
           </ul>
-        <h3>Sites avilable</h3>
+        <h3>Sites/lands avilable</h3>
         <h3>parks & shops & recreational activity place</h3>
 			</section>
 	</main>
