--- a/account.html
+++ b/account.html
@@ -23,7 +23,7 @@
       <a href="events.html">ಕಾರ್ಯಕ್ರಮಗಳು</a>
       <a href="media.html">ಹಾಡು ಮತ್ತು ಭಜನೆಗಳು</a>
       <a href="map.html">ನಕ್ಷೆ</a>
-      <a href="account.html">ನನ್ನ ಖಾತೆ</a>
+      <a href="account.html" class="active">ನನ್ನ ಖಾತೆ</a>
 		</nav>
 	</header>
 	<main>
