--- a/account.html
+++ b/account.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ನಮ್ಮ ಕೊಟ್ಟೂರು</title>
+	<title>ನನ್ನ ಖಾತೆ</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="icon" href="img/sri.jpg">
 	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
@@ -17,6 +17,7 @@
 		<nav>
 			<a href="home.html">ನಮ್ಮ ಊರು</a>
       <a href="news.html">ಸುದ್ದಿ</a>
+			<a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
       <a href="places.html">ಸ್ಥಳಗಳು</a>
       <a href="localgov.html">ಸರ್ಕಾರ(ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ)</a>
       <a href="business.html"> ಅಂಗಡಿಗಳು </a>
