--- a/business.html
+++ b/business.html
@@ -14,6 +14,7 @@
 		<nav>
 			<a href="home.html">ನಮ್ಮ ಊರು</a>
       <a href="news.html">ಸುದ್ದಿ</a>
+			<a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
       <a href="places.html">ಸ್ಥಳಗಳು</a>
       <a href="localgov.html">ಸರ್ಕಾರ(ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ)</a>
       <a href="business.html" class="active"> ಅಂಗಡಿಗಳು </a>
