--- a/covidtwitter.html
+++ b/covidtwitter.html
@@ -17,7 +17,7 @@
 		<nav>
 			<a href="home.html">ನಮ್ಮ ಊರು</a>
       <a href="news.html">ಸುದ್ದಿ</a>
-			<a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
+      <a href="covid-19.html">ಕೋವಿಡ್ 19 ಕೊಟ್ಟೂರು</a>
       <a href="places.html">ಸ್ಥಳಗಳು</a>
       <a href="localgov.html">ಸರ್ಕಾರ(ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ)</a>
       <a href="business.html"> ಅಂಗಡಿಗಳು </a>
@@ -33,6 +33,12 @@
 
 			</aside>
 			<section class="right">
+        <h3>ರಾಜ್ಯ ಮತ್ತು ಕೇಂದ್ರ ಘೋಷಣೆ</h3>
+        <p><a class="twitter-timeline" href="https://twitter.com/DHFWKA?ref_src=twsrc%5Etfw">Tweets by DHFWKA</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+        <p><a class="twitter-timeline" href="https://twitter.com/COVIDNewsByMIB?ref_src=twsrc%5Etfw">Tweets by COVIDNewsByMIB</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+        <h3></h3>
 
 			</section>
 	</main>
