--- a/account.html
+++ b/account.html
@@ -36,16 +36,16 @@
         <button type="button" name="Click here" onclick="hi()">Click Here for more info</button>
 			</section>
 	</main>
-  <footer>
+	<footer>
     <p>About us</p>
-    <p> This page was created by  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup></i></p>
+    <p> This page was created by <img src="img/KMH Logo.png" alt="logo" id="logo">  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup> </i></p>
     <details close>
       <summary>Sources for the information on page</summary>
       <p></p>
 
     </details>
     <details open>
-			<summary>Contact us</summary>
+			<summary id="contact">Contact Us</summary>
 	      <ul>
 	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
@@ -59,7 +59,7 @@
     </details>
 
     <address id="adr">
-      our office address
+
     </address>
 
   </footer>
