--- a/template.html
+++ b/template.html
@@ -38,7 +38,7 @@
 	</main>
   <footer>
     <p>About us</p>
-    <p> This page was created by  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup><img src="img/KMH Logo.png" alt="logo"  > </i></p>
+    <p> This page was created by <img src="img/KMH Logo.png" alt="logo" id="logo">  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup> </i></p>
     <details close>
       <summary>Sources for the information on page</summary>
       <p></p>
