--- a/covidtwitter.html
+++ b/covidtwitter.html
@@ -42,32 +42,32 @@
 
 			</section>
 	</main>
-  <footer>
-    <p>About us</p>
-    <p> This page was created by  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup></i></p>
-    <details close>
-      <summary>Sources for the information on page</summary>
-      <p></p>
+	<footer>
+	<p>About us</p>
+	<p> This page was created by <img src="img/KMH Logo.png" alt="logo" id="logo">  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup> </i></p>
+	<details close>
+		<summary>Sources for the information on page</summary>
+		<p></p>
 
-    </details>
-    <details open>
-			<summary id="contact">Contact Us</summary>
-	      <ul>
-	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
-	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
-	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
-	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
-	        <li><a href="https://www.facebook.com/MediaKotturu/" target="_blank"><i class="fab fa-facebook">Kotturu Media House</i></a></li>
-					<li><a href="https://www.youtube.com/channel/UCzLq02fdQk_LoQqW3Ofe0NQ" target="_blank"><i class="fab fa-youtube">youtube</i></a> </li>
-	        <li><a href="https://github.com/NammaKotturu" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
-	      </ul>
+	</details>
+	<details open>
+		<summary id="contact">Contact Us</summary>
+			<ul>
+				<li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
+				<li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
+				<li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
+				<li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
+				<li><a href="https://www.facebook.com/MediaKotturu/" target="_blank"><i class="fab fa-facebook">Kotturu Media House</i></a></li>
+				<li><a href="https://www.youtube.com/channel/UCzLq02fdQk_LoQqW3Ofe0NQ" target="_blank"><i class="fab fa-youtube">youtube</i></a> </li>
+				<li><a href="https://github.com/NammaKotturu" target="_blank"><i class="fab fa-github">GitHub</i></a></li>
+			</ul>
 
-    </details>
+	</details>
 
-    <address id="adr">
-      our office address
-    </address>
+	<address id="adr">
 
-  </footer>
-</body>
+	</address>
+
+</footer>
+  </body>
 </html>
