--- a/localgov.html
+++ b/localgov.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>ಸರ್ಕಾರ(ಪಟ್ಟಣ ಪಂಚಾಯಿತಿ)</title>
 	<link rel="stylesheet" href="css/index.css">
-	<!-- <script type="text/javascript" src="js/javascript1.js">
-
-	</script> -->
+	<link rel="icon" href="img/sri.jpg">
+	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/javascript.js"></script>
 </head>
 <body>
 	<header>
@@ -22,7 +22,6 @@
       <a href="media.html">ಹಾಡು ಮತ್ತು ಭಜನೆಗಳು</a>
       <a href="map.html">ನಕ್ಷೆ</a>
       <a href="account.html">ನನ್ನ ಖಾತೆ</a>
-			<!-- <a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a> -->
 		</nav>
 	</header>
 	<main>
@@ -30,7 +29,13 @@
 
 			</aside>
 			<section class = "right">
-				<h2></h2>
+				<h2>ಪಟ್ಟಣ / ತಾಲ್ಲೂಕು ಪಂಚಾಯಿತಿ</h2>
+				<p>If you are a official person from the local body government <br> please Email us --> <a href="mailto:KotturuMediaHouse@gmail.com?subject=localgovbody=Type_Here"  target="_blank">KotturuMediaHouse@gmail.com</a>  with a subject:localgov <br> for <br> Press Release & Public Announcments </p>
+					<br> <br> <br>
+
+					<p>For engineers who wants to contribute & know more about the project check out HTML comment Section of respective pages or feel free to join our github account</p>
+
+				<!-- <h2></h2>
         <p>Out source most of the content to legitamate writer/source</p>
 				<p>Try to include links, like <abbr title = "https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/">wikipedia</abbr> </p>
         <h3>Announcment</h3>
@@ -51,7 +56,7 @@
         <h3>State & central governence</h3>
         <h3>staff & contact for the department</h3>
         <h3>Kotturu Urban</h3>
-        <h3>Kotturu Rural</h3>
+        <h3>Kotturu Rural</h3> -->
 			</section>
 	</main>
 	<footer>
@@ -65,7 +70,7 @@
     <details open>
 			<summary id="contact">Contact Us</summary>
 	      <ul>
-	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
+	        <li><a href="KotturuMediaHouse@gmail.com" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
 	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
 	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
