--- a/news.html
+++ b/news.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>ಸುದ್ದಿ-ಸಮಾಚಾರ</title>
 	<link rel="stylesheet" href="css/index.css">
-	<!-- <script type="text/javascript" src="js/javascript1.js">
-
-	</script> -->
+	<link rel="icon" href="img/sri.jpg">
+	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/javascript.js"></script>
 </head>
 <body>
 	<header>
@@ -22,7 +22,7 @@
       <a href="media.html">ಹಾಡು ಮತ್ತು ಭಜನೆಗಳು</a>
       <a href="map.html">ನಕ್ಷೆ</a>
       <a href="account.html">ನನ್ನ ಖಾತೆ</a>
-			<!-- <a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a> -->
+
 		</nav>
 	</header>
 	<main>
@@ -30,8 +30,14 @@
 
 			</aside>
 			<section class = "right">
-				<h2></h2>
-        <p>Out source most of the content to legitamate writer/source</p>
+				<h2>ಸುದ್ದಿ ಸಮಾಚಾರ</h2>
+				<p>ನೀವು ಸ್ಥಳೀಯ ಸುದ್ದಿ ವರದಿಗಾರರೇ? </p>
+				<p>If you are intrested to Post here <br> please Email us --> <a href="mailto:KotturuMediaHouse@gmail.com?subject=News&body=Type_Here"  target="_blank">KotturuMediaHouse@gmail.com</a>  with a subject:News</p>
+					<br> <br> <br>
+
+					<p>For engineers who wants to contribute & know more about the project check out HTML comment Section of respective pages or feel free to join our github account</p>
+
+        <!-- <p>Out source most of the content to legitamate writer/source</p>
 				<p>Try to include links, like <abbr title = "https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/">wikipedia</abbr> </p>
         <h3>daily updates</h3>
 					<p>Events of today</p>
@@ -40,7 +46,7 @@
         <h3>daily news</h3>
 					<p>Reporting of the events</p>
 					<p>Old news in Archives</p>
-        <h3></h3>
+        <h3></h3> -->
 			</section>
 	</main>
 	<footer>
@@ -54,7 +60,7 @@
     <details open>
 			<summary id="contact">Contact Us</summary>
 	      <ul>
-	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
+	        <li><a href="KotturuMediaHouse@gamil.com" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
 	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
 	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
