--- a/template.html
+++ b/template.html
@@ -47,7 +47,7 @@
     <details open>
 			<summary id="contact">Contact Us</summary>
 	      <ul>
-	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
+	        <li><a href="KotturuMediaHouse@gmail.com" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
 	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
 	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
