--- a/business.html
+++ b/business.html
@@ -4,9 +4,11 @@
 	<meta charset="UTF-8">
 	<title>ಅಂಗಡಿಗಳು </title>
 	<link rel="stylesheet" href="css/index.css">
-	<!-- <script type="text/javascript" src="js/javascript1.js">
+	<link rel="icon" href="img/sri.jpg">
+	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/javascript.js">
 
-	</script> -->
+	</script>
 </head>
 <body>
 	<header>
@@ -22,7 +24,7 @@
       <a href="media.html">ಹಾಡು ಮತ್ತು ಭಜನೆಗಳು</a>
       <a href="map.html">ನಕ್ಷೆ</a>
       <a href="account.html">ನನ್ನ ಖಾತೆ</a>
-			<!-- <a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a> -->
+
 		</nav>
 	</header>
 	<main>
@@ -30,25 +32,30 @@
 
 			</aside>
 			<section class = "right">
-				<h2></h2>
-        <p>Out source most of the content to legitamate writer/source</p>
-				<p>Try to include links, like <abbr title = "https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/">wikipedia</abbr> </p>
-        <h3>list of all shops with filtering option</h3>
-        <ul>Filters include
-          <li>all</li>
-          <li>Home-order avilable</li>
-          <li>Kirana</li>
-          <li>Food & snacks</li>
-            <ul>
-              <li>Veg</li>
-              <li>Egg(with out Non-veg)</li>
-              <li>Non-veg</li>
-            </ul>
-          <li>item wise</li>
-        </ul>
-        <h3>sign up option for shops</h3>
-        <h3>menu & whats app bussiness number</h3>
-        <h3>payment option</h3>
+				<h2>ವ್ಯಾಪಾರ ಮತ್ತು ವಹಿವಾಟು</h2>
+					<p>If you are intrested to register your shop online please Email us --> <a href="mailto:KotturuMediaHouse@gmail.com?subject=Bussiness/Shop_Upload_request&body=Type_Here"  target="_blank">KotturuMediaHouse@gmail.com</a>  with a subject: Bussiness/shop Upload Request</p>
+					<br> <br> <br>
+
+					<p>For engineers who wants to contribute & know more about the project check out HTML comment Section of respective pages or feel free to join our github account</p>
+				<!-- <h2></h2>
+        	<p>Out source most of the content to legitamate writer/source</p>
+					<p>Try to include links, like <abbr title = "https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/">wikipedia</abbr> </p>
+        	<h3>list of all shops with filtering option</h3>
+        	<ul>Filters include
+          	<li>all</li>
+          	<li>Home-order avilable</li>
+          	<li>Kirana</li>
+          	<li>Food & snacks</li>
+            	<ul>
+              	<li>Veg</li>
+              	<li>Egg(with out Non-veg)</li>
+              	<li>Non-veg</li>
+            	</ul>
+          	<li>item wise</li>
+        	</ul>
+        	<h3>sign up option for shops</h3>
+        	<h3>menu & whats app bussiness number</h3>
+        	<h3>payment option</h3> -->
 			</section>
 	</main>
 	<footer>
@@ -62,7 +69,7 @@
     <details open>
 			<summary id="contact">Contact Us</summary>
 	      <ul>
-	        <li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
+	        <li><a href="KotturuMediaHouse@gmail.com" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 	        <li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
 	        <li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
 	        <li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
