--- a/events.html
+++ b/events.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>ಕಾರ್ಯಕ್ರಮಗಳು</title>
 	<link rel="stylesheet" href="css/index.css">
-	<!-- <script type="text/javascript" src="js/javascript1.js">
-
-	</script> -->
+	<link rel="icon" href="img/sri.jpg">
+	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/javascript.js"></script>
 </head>
 <body>
 	<header>
@@ -22,7 +22,6 @@
       <a href="media.html">ಹಾಡು ಮತ್ತು ಭಜನೆಗಳು</a>
       <a href="map.html">ನಕ್ಷೆ</a>
       <a href="account.html">ನನ್ನ ಖಾತೆ</a>
-			<!-- <a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a> -->
 		</nav>
 	</header>
 	<main>
@@ -30,7 +29,18 @@
 
 			</aside>
 			<section class = "right">
-				<h2></h2>
+				<h2>ಸಭೆ ಮತ್ತು ಸಮಾರಂಭಗಳು</h2>
+				<ul>ಕೆಳಗಿನ ಎಲ್ಲಾ ಸೇವೆಗಳಿಗಾಗಿ ನಮ್ಮನ್ನು ಸಂಪರ್ಕಿಸಿ
+					<li>ಯಾವುದೇ ರೀತಿಯ ಕಾರ್ಯಕ್ರಮ ಘೋಷಣೆ </li>
+					<li>ಆಮಂತ್ರಣಗಳು</li>
+					<li>ಸಾರ್ವಜನಿಕ ಸಮಾರಂಭಗಳು</li>
+					<p>Email us --> <a href="mailto:KotturuMediaHouse@gmail.com?subject=Events"  target="_blank">KotturuMediaHouse@gmail.com</a>  with a subject: Events</p>
+					<br> <br> <br>
+
+					<p>For engineers who wants to contribute & know more about the project check out HTML comment Section of respective pages or feel free to join our github account</p>
+
+				</ul>
+				<!-- <h2></h2>
         <p>Out source most of the content to legitamate writer/source</p>
 				<p>Try to include links, like <abbr title = "https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/">wikipedia</abbr> </p>
         <h3>Events under these heading</h3>
@@ -44,7 +54,7 @@
         </ul>
         <h3>Calender of the whole year</h3>
         <h3></h3>
-        <h3></h3>
+        <h3></h3> -->
 			</section>
 	</main>
 	<footer>
@@ -58,7 +68,7 @@
 	<details open>
 		<summary id="contact">Contact Us</summary>
 			<ul>
-				<li><a href="#" target="_blank"><i class="fas fa-at">Email us</i></a></li>
+				<li><a href="KotturuMediaHouse@gmail.com" target="_blank"><i class="fas fa-at">Email us</i></a></li>
 				<li><a href="#" target="_blank"><i class="fab fa-whatsapp-square">WhatsApp</i></a>  </li>
 				<li><a href="https://twitter.com/MediaKotturu" target="_blank" ><i class="fab fa-twitter">@MediaKotturu</i></a></li>
 				<li><a href="https://www.instagram.com/kotturu_m_h/" target="_blank" ><i class="fab fa-instagram">Kotturu M H</i></a>	</li>
