--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
       <a href="media.html">ಹಾಡು ಮತ್ತು ಭಜನೆಗಳು</a>
       <a href="map.html">ನಕ್ಷೆ</a>
       <a href="account.html">ನನ್ನ ಖಾತೆ</a>
-			<!-- <a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a> -->
+
 		</nav>
 	</header>
 	<main>
@@ -31,7 +31,6 @@
 			</aside> -->
 			<section >
 				<h2>ಶ್ರೀ ಕ್ಷೇತ್ರ ಕೊಟ್ಟೂರು </h2>
-        	<p>Out source most of the content to legitamate writer/source</p>
         	<h3>🌻ಕೊಟ್ಟೂರು ನಗರದ ಇತಿಹಾಸ🌻</h3>
 					<p><a href="https://kn.wikipedia.org/s/ag4" target="_blank">ಕೊಟ್ಟೂರು ವಿಕಿಪೀಡಿಯದಿಂದ</a> ಕೃಪೆ:ವಿಕೀಪಿಡಿಯ (ಅಂತರ್ಜಾಲ) </p>
 						<h4>ರಾಜ್ಯದಲ್ಲಿ ನೂತನವಾಗಿ ರಚಿತವಾಗಿರುವ ಕೊಟ್ಟೂರು ತಾಲೂಕಿನ ಸಂಕ್ಷಿಪ್ತ ಪರಿಚಯ.</h4>
@@ -140,14 +139,14 @@
 					</ul>
 					</p>
 
-        <h3>short description & link to each heading of navigation</h3>
-        <h3>bus route & train routes & connectivity</h3>
+        <!-- <h3>short description & link to each heading of navigation</h3>
+        <h3>bus route & train routes & connectivity</h3> -->
 
 			</section>
 	</main>
 	<footer>
 		<p>About us</p>
-		<p> This page was created by <img src="img/KMH Logo.png" alt="logo" id="logo">  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup> </i></p> <p> & <a href="https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/" target="_blank">Wikepedia page of the kotturu</a></p>
+		<p> This page was created by <img src="img/KMH Logo.png" alt="logo" id="logo">  <i class="far fa-newspaper"> Kotturu Media House <sup>&copy 2022</sup> </i></p> <p> With the help of resources from <a href="https://en.wikipedia.org/wiki/Kotturu,_Karnataka#/" target="_blank">Wikepedia page of the kotturu</a></p>
 		<details close>
 			<summary>Sources for the information on page</summary>
 			<p></p>
