--- a/home.html
+++ b/home.html
@@ -32,28 +32,28 @@
 			<section >
 				<h2>ಶ್ರೀ ಕ್ಷೇತ್ರ ಕೊಟ್ಟೂರು </h2>
         	<h3>🌻ಕೊಟ್ಟೂರು ನಗರದ ಇತಿಹಾಸ🌻</h3>
-					<p><a href="https://kn.wikipedia.org/s/ag4" target="_blank">ಕೊಟ್ಟೂರು ವಿಕಿಪೀಡಿಯದಿಂದ</a> ಕೃಪೆ:ವಿಕೀಪಿಡಿಯ (ಅಂತರ್ಜಾಲ) </p>
+					<p><a href="https://kn.wikipedia.org/s/ag4" target="_blank"> ಕೊಟ್ಟೂರು ವಿಕಿಪೀಡಿಯದಿಂದ </a> ಕೃಪೆ:ವಿಕೀಪಿಡಿಯ (ಅಂತರ್ಜಾಲ) </p>
 						<h4>ರಾಜ್ಯದಲ್ಲಿ ನೂತನವಾಗಿ ರಚಿತವಾಗಿರುವ ಕೊಟ್ಟೂರು ತಾಲೂಕಿನ ಸಂಕ್ಷಿಪ್ತ ಪರಿಚಯ.</h4>
 						<ul>ಕೊಟ್ಟೂರು ಬಳ್ಳಾರಿ ಜಿಲ್ಲೆಯ ಒಂದು ಐತಿಹಾಸಿಕ ಹಿನ್ನಲೆ ಇರುವ ೨೦೧೮ನೇ ಇಸವಿಯಲ್ಲಿ ಹೊಸದಾಗಿ ಘೋಷಣೆಯಾದ ತಾಲೂಕು ಕೇಂದ್ರ.
 							<li>ರಾಜ್ಯ: ಕರ್ನಾಟಕ.</li>
 							<li>ಜಿಲ್ಲೆ: ವಿಜಯನಗರ (ಬಳ್ಳಾರಿ).</li>
-							<li>ಬಳ್ಳಾರಿನಿರ್ದೇಶಾಂಕಗಳು14.817° N 76.217° E</li>
+							<li>ಬಳ್ಳಾರಿ ನಿರ್ದೇಶಾಂಕಗಳು : 14.817° N 76.217° E</li>
 							<li>ವಿಸ್ತಾರ - ಎತ್ತರ : 33.08 km² - 586 ಮೀ.</li>
-							<li>ಸಮಯ ವಲಯIST (UTC+5:30)</li>
+							<li>ಸಮಯ ವಲಯ IST (UTC+5:30)</li>
 							<li>2001 ರ ಭಾರತದ ಜನಗಣತಿಯ ಪ್ರಕಾರ
 								<ul>
 									<li>ಕೊಟ್ಟೂರು 22,667 ಜನಸಂಖ್ಯೆಯನ್ನು ಹೊಂದಿತ್ತು.</li>
 									<li>ಜನಸಂಖ್ಯೆಯಲ್ಲಿ ಪುರುಷರು 52% ಮತ್ತು ಮಹಿಳೆಯರು 48% ರಷ್ಟಿದ್ದಾರೆ.</li>
-									<li> ಕೊಟ್ಟೂರು ಸರಾಸರಿ 69% ಸಾಕ್ಷರತೆಯನ್ನು ಹೊಂದಿದೆ, ಇದು ರಾಷ್ಟ್ರೀಯ ಸರಾಸರಿ 59.5% ಗಿಂತ ಹೆಚ್ಚಾಗಿದೆ:<br> ಪುರುಷರ ಸಾಕ್ಷರತೆ 76% <br> ಮಹಿಳಾ ಸಾಕ್ಷರತೆ 61%.</li>
-									<li> ಕೊಟ್ಟೂರಿನಲ್ಲಿ 12% ಜನಸಂಖ್ಯೆಯು 6 ವರ್ಷದೊಳಗಿನವರು</li>
+									<li>ಕೊಟ್ಟೂರು ಸರಾಸರಿ 69% ಸಾಕ್ಷರತೆಯನ್ನು ಹೊಂದಿದೆ, ಇದು ರಾಷ್ಟ್ರೀಯ ಸರಾಸರಿ 59.5% ಗಿಂತ ಹೆಚ್ಚಾಗಿದೆ:<br> ಪುರುಷರ ಸಾಕ್ಷರತೆ 76% <br> ಮಹಿಳಾ ಸಾಕ್ಷರತೆ 61%.</li>
+									<li>ಕೊಟ್ಟೂರಿನಲ್ಲಿ 12% ಜನಸಂಖ್ಯೆಯು 6 ವರ್ಷದೊಳಗಿನವರು</li>
+									<li>ಜನಸಂಖ್ಯೆ ಸಾಂದ್ರತೆ- 686.25/ಚದರ ಕಿ.ಮಿ.</li>
 								</ul>
 							</li>
-							<li>ಸಾಂದ್ರತೆ- 686.25/ಚದರ ಕಿ.ಮಿ.</li>
 							<li>ಕೋಡ್‍ಗಳು
 								<ul>
-									<li>ಪಿನ್ ಕೋಡ್ :583134</li>
-									<li>ಎಸ್.ಟಿ.ಡಿ.:+08391</li>
-									<li>ವಾಹನ :35</li>
+									<li>ಪಿನ್ ಕೋಡ್ : 583134</li>
+									<li>ಎಸ್.ಟಿ.ಡಿ.: +08391</li>
+									<li>ವಾಹನ : 35</li>
 								</ul>
 							</li>
 						</ul>
@@ -114,8 +114,8 @@
 						<br>ಈ ಸ್ಥಳವು ಹಿರಿಯ ರಂಗಕರ್ಮಿ ಕೊಟ್ಟೂರಪ್ಪ, ಪೌರಾಣಿಕ ನಟರಿಂದ ಪ್ರಸಿದ್ಧವಾಗಿದೆ, ಅವರ ಅಭಿನಯವು ದಾನಶೂರ ಕರ್ಣನ ಪಾತ್ರದಲ್ಲಿ ಕರ್ನಾಟಕದಾದ್ಯಂತ ವ್ಯಾಪಕವಾಗಿ ಪ್ರಸಿದ್ಧವಾಗಿದೆ.
 					ದೇಶಿ, ದೇವರಮನೆ ಶಿವಾನಂದಪ್ಪ, ಈ ಸ್ಥಳದ ಮೊದಲ ಲೇಖಕರು, ಅವರು ಬಳ್ಳಾರಿಯ ಸ್ಥಳೀಯ ದಿನಪತ್ರಿಕೆ, ರೈತಾ, ಉಪ ಸಂಪಾದಕರೂ ಆಗಿದ್ದರು.
 					 ಭದ್ರಶೆಟ್ಟಿ ಸಣ್ಣ ರುದ್ರಪ್ಪ, ಗೊರಲಿ ಶರಣಪ್ಪ, ಡಾ. ಅಲಬೂರು ನಂಜಪ್ಪ ಇಲ್ಲಿನ ಕೆಲವು ಸ್ವಾತಂತ್ರ್ಯ ಹೋರಾಟಗಾರರು. </p>
-				<h4>Suvarna news coverage dated - 28-02-2019
-					<a href="https://kannada.asianetnews.com/amp/travel/significance-of-kuttur-sri-guru-basaveshwara-pnmhpy">ನಿಜ ಭಕುತಿಯ ತೋರಿದ ಮಹಾ ಜಂಗಮ!</a> </h4>
+					 <hr>
+				<h4><a href="https://kannada.asianetnews.com/amp/travel/significance-of-kuttur-sri-guru-basaveshwara-pnmhpy">ನಿಜ ಭಕುತಿಯ ತೋರಿದ ಮಹಾ ಜಂಗಮ!</a> <sup>Suvarna news coverage dated - 28-02-2019</sup> </h4>
 					<p>ತನ್ನ ಅದಮ್ಯ ಭಕ್ತಿ, ಸಮಾನತೆಯ ಆಶಯಗಳನೊತ್ತ ಕೊಟ್ಟೂರಿನ ಶ್ರೀಗುರು ಬಸವೇಶ್ವರರು
 						ಶೋಷಿತರ ಧ್ವನಿಯಾಗಿ ಸಾಮಾಜಿಕ ಹರಿಕಾರನಾಗಿ, ಡಾಂಬಿಕ ಭಕ್ತಿ, ಮೂಢನಂಬಿಕೆಯನ್ನು
 						ತನ್ನ ಜೀವನ ದರ್ಶನದ ಮೂಲಕ ಸಾಮಾನ್ಯ ಜನತೆಗೆ ಮನಸ್ಸಿನಿಂದ ಕಿತ್ತೊಗೆದು ಮಾನವೀಯತೆಯ ಬೀಜ ಬಿತ್ತಿದ ಮಹಾಶರಣರು.
