--- a/localgov.html
+++ b/localgov.html
@@ -30,7 +30,7 @@
 			</aside>
 			<section class = "right">
 				<h2>ಪಟ್ಟಣ / ತಾಲ್ಲೂಕು ಪಂಚಾಯಿತಿ</h2>
-				<p>If you are a official person from the local body government <br> please Email us --> <a href="mailto:KotturuMediaHouse@gmail.com?subject=localgovbody=Type_Here"  target="_blank">KotturuMediaHouse@gmail.com</a>  with a subject:localgov <br> for <br> Press Release & Public Announcments </p>
+				<p>If you are a official person from the local body government <br> please Email us --> <a href="mailto:KotturuMediaHouse@gmail.com?subject=localgov&body=Type_Here"  target="_blank">KotturuMediaHouse@gmail.com</a>  with a subject:localgov <br> for <br> Press Release & Public Announcments </p>
 					<br> <br> <br>
 
 					<p>For engineers who wants to contribute & know more about the project check out HTML comment Section of respective pages or feel free to join our github account</p>
