--- a/template.html
+++ b/template.html
@@ -7,9 +7,7 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="icon" href="img/sri.jpg">
 	<script src="https://kit.fontawesome.com/79ba05e417.js" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/javascript.js">
-
-	</script>
+	<script type="text/javascript" src="js/javascript.js"></script>
 </head>
 <body>
 	<header>
